--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a herf="#HOME">HOME</a></li>
-                <li><a herf="#ABOUT">AOUT</a></li>
-                <li><a herf="#CONTACT">CONTACT</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
     <main>
         <article>
@@ -24,7 +22,7 @@
         </article>
     </main>
     <footer>
-        <p>@copyright</p>
+        <p>@copyright </p>
     </footer>
 </body>
 </html>
