--- a/0x00-semantic_html/1-index.html
+++ b/0x00-semantic_html/1-index.html
@@ -9,14 +9,12 @@
     <title>Semantic Html Blog Post</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a herf="#HOME">HOME</a></li>
-                <li><a herf="#ABOUT">AOUT</a></li>
-                <li><a herf="#CONTACT">CONTACT</a></li>
-            </ul>
-        </nav>
+   <header>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
     <main>
         <article>
